unpackaged/main/default/objects/bt_base__Form_Element_Condition__c/bt_base__Form_Element_Condition__c.object-meta.xml
<CustomObject>
    <description>Used for Form Elements with conditional logic.</description>
    <label>BT Form Element Condition</label>
    <nameField>
        <displayFormat>FEC-{000000}</displayFormat>
        <label>BT Form Element Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Form Element Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>