unpackaged/main/default/objects/bt_base__Form_Element_Condition__c/fields/bt_base__Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Condition_Operator__c</fullName>
    <description>The operator by which this condition is evaluated.</description>
    <inlineHelpText>The operator by which this condition is evaluated.</inlineHelpText>
    <label>Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>