unpackaged/main/default/objects/bt_base__Form_Element_Condition__c/fields/bt_base__Form_Element__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The controlling Form Element.</description>
    <inlineHelpText>The controlling Form Element.</inlineHelpText>
    <label>BT Form Element</label>
    <referenceTo>bt_base__Form_Element__c</referenceTo>
    <relationshipLabel>BT Form Element Conditions</relationshipLabel>
    <relationshipName>Form_Element_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>