unpackaged/main/default/objects/bt_base__Form_Element_Condition__c/fields/bt_base__Next_Form_Element__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Next_Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form Element that will follow if this Element&#39;s conditions are met.</description>
    <inlineHelpText>The Form Element that will follow if this Element&#39;s conditions are met.</inlineHelpText>
    <label>Next Form Element</label>
    <referenceTo>bt_base__Form_Element__c</referenceTo>
    <relationshipLabel>Form Element Conditions (Next Form Element)</relationshipLabel>
    <relationshipName>Form_Element_Conditions1</relationshipName>
    <type>Lookup</type>
</CustomField>